# metal-cpp

./: CMakeLists.txt  README.md
SingleHeader/: Metal.hpp
metal-cpp/SingleHeader/: Metal.hpp
